corrigindo erros das imagens

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <!--barra superior de navegação-->
      <nav class="navigation">
-      <img src="/src/img/logo.png" alt="FitClub Logo" id="logo">
+      <img src="./src/img/logo.png" alt="FitClub Logo" id="logo">
       <ul id="navlist">
         <li><a href="#home">Home</a></li>
         <li><a href="#program">Program</a></li>
@@ -45,34 +45,34 @@
           <section id="program">
             <h2>EXPLORE OUR PROGRAM</h2>
             <div>
-              <button id="left-button"><img src="/src/img/icons/seta-esquerda.png" alt="seta esquerda"></button>
-            <button id="right-button"><img src="/src/img/icons/seta-direita.png" alt="seta direita"></button> 
+              <button id="left-button"><img src="./src/img/icons/seta-esquerda.png" alt="seta esquerda"></button>
+            <button id="right-button"><img src="./src/img/icons/seta-direita.png" alt="seta direita"></button> 
             </div>
           </section>
           <section class="section-cards reveal">
             <ul class="list-cards">
               <li>
-                <img src="/src/img/icons/motivacao.png" alt="Strength" class="card-image">
+                <img src="./src/img/icons/motivacao.png" alt="Strength" class="card-image">
                 <h3>Strength</h3>
                 <p>Embrace the essence of strength as we delve into its varous dimensions phsical, mental, and emotional.</p>
                 <a>Join now<img></a>
                 
               </li>
               <li>
-                <img src="/src/img/icons/ginastica.png" alt="Physical Fitness"
+                <img src="./src/img/icons/ginastica.png" alt="Physical Fitness"
                 class="card-image">
                 <h3>Physical Fitness</h3>
                 <p>It encompasses a range of activies that improve health, strength, flexbility, and overallwell-being.</p>
                 <a>Join now<img></a>
               </li>
               <li>
-                <img src="/src/img/icons/corrida.png" alt="Fat Lose" class="card-image">
+                <img src="./src/img/icons/corrida.png" alt="Fat Lose" class="card-image">
                 <h3>Fat Lose</h3>
                 <p>Through a combination of workout routines and expert guidance, we'll empower you to reach your goals.</p>
                 <a>Join now<img></a>
               </li>
               <li>
-                <img src="/src/img/icons/cesta-de-compras.png" alt="Weight Gain" class="card-image">
+                <img src="./src/img/icons/cesta-de-compras.png" alt="Weight Gain" class="card-image">
                 <h3>Weight Gain</h3>
                 <p>Designed for individuals, our program affers an effective approach to gaining weight in a sustainable manner.</p>
                 <a>Join now<img></a>
@@ -82,8 +82,8 @@
         </article>
         <article id="class">
           <section class="reveal">
-            <img src="/src/img/class-1.jpg" alt="homem se exercitando" id="class-one">
-            <img src="/src/img/class-2.jpg" alt="outro homem se exercitando" id="class-two">
+            <img src="./src/img/class-1.jpg" alt="homem se exercitando" id="class-one">
+            <img src="./src/img/class-2.jpg" alt="outro homem se exercitando" id="class-two">
           </section>
           <section>
             <!--sessão de classe-->
@@ -98,24 +98,24 @@
           <section id="section-join">
             <h2>WHY JOIN US ?</h2>
             <p>Our diverse membership base creates a friendly and supportive atmosphere, where you can make friends and stay motivated.</p>
-            <img src="/src/img/join.jpg" alt="Join" class="reveal">
+            <img src="./src/img/join.jpg" alt="Join" class="reveal">
             <ul>
               <li>
-                <img src="/" alt="personal trainer" class="card-image">
+                <img src="./src/img/icons/favoritos.png" alt="personal trainer" class="card-image">
                 <div>
                   <h3>Personal Trainer</h3>
                 <p>Unlock your potential with our expert Personal Trainers.</p>
                 </div>
               </li>
               <li>
-                <img src="/src/img/icons/camera-de-video.png" alt="camera" class="card-image">
+                <img src="./src/img/icons/camera-de-video.png" alt="camera" class="card-image">
                 <div>
                   <h3>Pratice Sessions</h3>
                 <p>Elevate your fitness with pratice sessions</p>
                 </div>
               </li>
               <li>
-                <img src="/src/img/icons/edificios.png" alt="edificil" class="card-image">
+                <img src="./src/img/icons/edificios.png" alt="edificio" class="card-image">
                 <div>
                   <h3>Good Management</h3>
                 <p>Supportive management, for your fitness sucess</p>
@@ -136,8 +136,8 @@
               <h3>Basic Plan</h3>
               <h4>$16</h4>
               <ul>
-                <li><img src="/src/img/icons/ok.png" alt="check"> Smart Workout plan</li>
-                <li><img src="/src/img/icons/ok.png" alt="check"> At home workouts</li>
+                <li><img src="./src/img/icons/ok.png" alt="check"> Smart Workout plan</li>
+                <li><img src="./src/img/icons/ok.png" alt="check"> At home workouts</li>
               </ul>
               <button>Join Now</button>
             </section>
@@ -145,9 +145,9 @@
               <h3>Weeklyn Plan</h3>
               <h4>$25</h4>
               <ul>
-                <li><img src="/src/img/icons/ok.png" alt="check"> PRO Gyms</li>
-                <li><img src="/src/img/icons/ok.png" alt="check"> Smart Workout plan</li>
-                <li><img src="/src/img/icons/ok.png" alt="check"> At home workouts</li>
+                <li><img src="./src/img/icons/ok.png" alt="check"> PRO Gyms</li>
+                <li><img src="./src/img/icons/ok.png" alt="check"> Smart Workout plan</li>
+                <li><img src="./src/img/icons/ok.png" alt="check"> At home workouts</li>
               </ul>
               <button>Join Now</button>
             </section>
@@ -155,11 +155,11 @@
               <h3>Monthly Plan</h3>
               <h4>$45</h4>
               <ul>
-                <li><img src="/src/img/icons/ok.png" alt="check"> ELITE Gyms & Classes</li>
-                <li><img src="/src/img/icons/ok.png" alt="check"> PRO Gyms</li>
-                <li><img src="/src/img/icons/ok.png" alt="check"> Smart Workout plan</li>
-                <li><img src="/src/img/icons/ok.png" alt="check"> At home workouts</li>
-                <li><img src="/src/img/icons/ok.png" alt="check"> Personal Training</li>
+                <li><img src="./src/img/icons/ok.png" alt="check"> ELITE Gyms & Classes</li>
+                <li><img src="./src/img/icons/ok.png" alt="check"> PRO Gyms</li>
+                <li><img src="./src/img/icons/ok.png" alt="check"> Smart Workout plan</li>
+                <li><img src="./src/img/icons/ok.png" alt="check"> At home workouts</li>
+                <li><img src="./src/img/icons/ok.png" alt="check"> Personal Training</li>
               </ul>
                 <button>Join Now</button>
             </section>
@@ -173,24 +173,24 @@
         <p>What truly this gym apart is their expert team of trainers. The trainers are knowledgeable, approachable, and genuinely invested in helping members achive their fitness goals. They take the time to understand individual needs and create personalized workout plans, ensuaring maximum results and safety. </p>
        <ul>
         <li>
-          <img src="/src/img/icons/estrela.png" alt="">
-          <img src="/src/img/icons/estrela.png" alt="">
-          <img src="/src/img/icons/estrela.png" alt="">
-          <img src="/src/img/icons/estrela.png" alt="">
-          <img src="/src/img/icons/estrela.png" alt="">
+          <img src="./src/img/icons/estrela.png" alt="">
+          <img src="./src/img/icons/estrela.png" alt="">
+          <img src="./src/img/icons/estrela.png" alt="">
+          <img src="./src/img/icons/estrela.png" alt="">
+          <img src="./src/img/icons/estrela.png" alt="">
         </li>
        </ul>
        <article>
         <section>
-          <img src="/src/img/member.jpg" alt="">
+          <img src="./src/img/member.jpg" alt="">
           <div id="">
             <h4>Jane Cooper</h4>
           <p>Software Developer</p>
           </div>
         </section>
         <div class="buttons">
-          <button ><img src="/src/img/icons/seta-esquerda-hover.png" alt="seta esquerda"></button>
-        <button ><img src="/src/img/icons/seta-direita-hover.png" alt="seta direita"></button> 
+          <button ><img src="./src/img/icons/seta-esquerda-hover.png" alt="seta esquerda"></button>
+        <button ><img src="./src/img/icons/seta-direita-hover.png" alt="seta direita"></button> 
         </div>
       </article>
       </section>
@@ -198,7 +198,7 @@
     <!--footer-->
     <footer>
       <section id="section-network">
-        <img src="/src/img/images/logo.png" alt="">
+        <img src="./src/img/images/logo.png" alt="">
         <p>Take the frist step towards a heathier, stronger you with our unbeatable pricing plans. Let's sweat, achive, and conquer together!</p>
         <ul>
           <li>
