--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </section>
       <section id="section-image">
         <span>O</span>
-        <img src="/src/img/header.png" alt="homem malhando">
+        <img src="./src/img/header.png" alt="homem malhando">
       </section>
       </header>
       <main>
